
= ruote-sequel - CHANGELOG.txt


== ruote-sequel 2.3.1    not yet released


== ruote-sequel 2.3.0    released 2012/09/01

- switched to "begin_step" model
- StorageParticipant#by_participant :skip :limit fix (Thanks Jan Topiński)
- #delete : doc count > 1 is OK
- StorageParticipant :count => true made consistent (Thanks Jan Topiński)
- query_workitems didn't recognize :skip option (Thanks Eric Smith)
- 'table_name' option for specifying something other than 'documents'


== ruote-sequel 2.2.0    released 2011/03/01

- initial release
