@@ -4,6 +4,9 @@
 
 == ruote-sequel 2.3.1    not yet released
 
+- d[:doc].read if possible, as devised with Geoff Herney in
+  https://groups.google.com/d/topic/openwferu-users/ivLPT4jASVc/discussion
+
 
 == ruote-sequel 2.3.0    released 2012/09/01
 
